src/objects/Payment_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Nickname__c</fullName>
        <label>Account Nickname</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Accounts</relationshipLabel>
        <relationshipName>Payment_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Card__c</fullName>
        <label>Name on Card</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Nickname__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Payment Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Accounts</pluralLabel>
    <recordTypes>
        <fullName>Bank_Account</fullName>
        <active>true</active>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <label>Credit Card</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>